<resources>
    <string name="addwifi_btntext">Add Wifi Device</string>
    <string name="delwifi_btntext">Delete Wifi Device</string>
    <string name="addwave_btntext">Add Z-Wave Device</string>
    <string name="delzwave_btntext">Delete Z-Wave Device</string>
    <string name="editDevice_btntext">Edit Device</string>
    <string name="editicon_btntext">Select an icon for the device</string>
    <string name="editroom_btntext">House Rooms</string>
    <string name="addfavorites_chktext">ADD THIS DEVICE TO FAVORITES</string>
    <string name="newroom_btntext">Add new room</string>
    <string name="warning_fields">Please fill in all required fields</string>
    <string name="warning_fail_newdev1">It was not possible to connect your device</string>
    <string name="warning_fail_newdev2">warning 2</string>
    <string name="addDevice_success_dialog">The device was added successfully</string>
    <string name="lblnameroom_dialog">Room Name: </string>
    <string name="lblnamedev">Set a name for this device: Ej. "Kitchen light"</string>
    <string name="acept">Acept</string>
    <string name="cancel">Cancel</string>
    <string name="button_edit_scene">Edit Scene</string>
    <string name="button_delete_scene">Delete Scene</string>
    <string name="button_add_scene">Add Scene</string>
    <string name="label_deletedev_activity_title">Delete Device</string>
    <string name="label_devices_activity_title">Devices</string>
    <string name="label_newdev_activity_title">New Devices</string>
    <string name="label_warning_delete_device">Are you sure you want to delete this device</string>
    <string name="label_warning_delete_scene">Are you sure you want to delete this scene</string>
    <string name="label_delete_scene_activity_title">Delete Scenes</string>
    <string name="label_delete_scene_failed">Only the person who created an scene can remove it</string>
    <string name="label_edit_scene_activity_title">Select Scene</string>
    <string name="label_remove_escene_success">Scene deleted!</string>
    <string name="label_listcommands_activity_title">Edit Commands</string>
    <string name="label_selectscenedevice_activity_title">Select Device</string>
    <string name="btn_addcommand">Add Command</string>
    <string name="app_name">Domu</string>
    <string name="login_title">Login to your account</string>
    <string name="login_text">Login</string>
    <string name="logout_text">Logout</string>
    <string name="register_text">Register</string>
    <string name="toast_login_failure">There was a problem logging into Domu. Are you connected to the internet?</string>
    <string name="toast_hub_registration_failure">The serial you registered is not valid, please verify and try again.</string>
    <string name="toast_login_bad_credentials">We were unable to login with provided credentials. Did you forgot your password?</string>
    <string name="toast_login_server_error">We were unable to log into Domu. Are you using the latest version of the app?</string>
    <string name="toast_missing_fields">You must fill all the required fields</string>
    <string name="toast_missing_permission">Please accept the permission Domu need it to work</string>
    <string name="toast_missing_internet">Are you connected to the internet?</string>
    <string name="label_local_conf_wifi">Enter your home Wi-Fi network</string>
    <string name="label_local_conf_password">Enter your home Wi-Fi password</string>
    <string name="label_local_conf_time_zones">Select your home time zone</string>
    <string name="label_local_conf_submit_button">Connect Domu to my home Wifi</string>
    <string name="nav_menu_open">Open navigation drawer</string>
    <string name="nav_menu_close">Close navigation drawer</string>
    <string name="label_notification_feed">Activity</string>
    <string name="label_home_activity_title">Domu Home</string>
    <string name="label_nav_bar_title">Domu Home</string>
    <string name="label_user_management_title">User Options</string>
    <string name="nav_bar_new_user_title">New Account</string>
    <string name="btn_new_user_create">Create Account</string>
    <string name="label_new_user_existing_user">Already have an account ?</string>
    <string name="edit_text_new_user_name">Name</string>
    <string name="edit_text_new_user_lastname">Lastname</string>
    <string name="edit_text_new_user_email">E-mail</string>
    <string name="edit_text_new_user_confirm_email">Confirm E-mail</string>
    <string name="edit_text_new_user_password">Password</string>
    <string name="edit_text_new_user_conf_password">Confirm Password</string>
    <string name="toast_incomplete_form">Incomplete Form</string>
    <string name="toast_not_matching_email">The e-mails are not equal</string>
    <string name="create_user_error">Error creating user</string>
    <string name="toast_email_format_error">Incorrect email format</string>
    <string name="label_created_user_message">Thanks for signing \nin Domu.
        \n \nIt is only a few steps \nto control your home from \nthe palm of your hand. </string>
    <string name="label_created_user_title">Welcome!</string>
    <string name="label_manage_guests">Manage Guests</string>
    <string name="label_new_guest_button">Add new guest</string>
    <string name="label_manage_account_button">Manage Account</string>
    <string name="label_change_password_button">Change Password</string>
    <string name="label_guest_list">Guest List</string>
    <string name="label_add_button">Add</string>
    <string name="label_cancel_button">Cancel</string>
    <string name="label_add_guest_by_email">Add guest using email</string>
    <string name="label_confirmation_remove_guest">Are you sure you want to remove: </string>
    <string name="label_failed_remove_guest">Unable to remove guest, try again</string>
    <string name="label_guest_removed_message">Guest removed!</string>
    <string name="label_only_administrator_can_add_guest">Only the administrator can manage the guests in this hub</string>
    <string name="label_only_failed_add_guest">Failed. The user with that email must create a Domu account first.</string>
    <string name="label_edit_user_first_name">Edit your first name:</string>
    <string name="label_edit_user_first_name_text_view">First Name</string>
    <string name="label_edit_user_last_name">Edit your last name:</string>
    <string name="label_edit_user_last_name_text_view">Last Name</string>
    <string name="label_edit_user_email">Edit your email address:</string>
    <string name="label_edit_user_email_text_view">Email</string>
    <string name="label_edit_user_button">Update my information</string>
    <string name="label_error_updating_user">Error while updating information. Please try again.</string>
    <string name="label_success_updating_user">Information updated successfully!.</string>
    <string name="label_change_password_old">My current password:</string>
    <string name="label_change_password_new">Type the new password:</string>
    <string name="label_change_password_new_repeat">Type the new password again:</string>
    <string name="label_error_message_fill_fields">Please fill all the fields</string>
    <string name="label_error_message_passwords_missmatch">You did not confirm the password correctly. Please try again. </string>
    <string name="label_error_message_passwords_failed">The old password is either wrong or the new password is too short.</string>
    <string name="label_message_passwords_success">The password was changed!</string>
    <string name="nav_bar_prop_reg_hub_title">New Hub Properties</string>
    <string name="label_prop_req_hub_name">Name your home:</string>
    <string name="edit_text_prop_req_hub_name_hint">Eg: Home, Office …</string>
    <string name="label_prop_req_hub_image">Capture or select an \nimage for your home</string>
    <string name="label_prop_reg_hub_map">Locate your home clicking in the map, so some actions can be executed when you arrive or leave of the area</string>
    <string name="label_continue">Continue</string>
    <string name="title_activity_map_register_hub">Select Location</string>
    <string name="label_map_register_back">If you want to relocate your hub, press \nthe desire place for a few seconds</string>
    <string name="label_map_register_forward">Drag the green marker to determine the \nsize of the reception area of your home</string>
    <string name="map_selected_location">Done</string>
    <string name="capture">Capture</string>
    <string name="select">Select</string>
    <string name="btn_connect_outlet">Continue</string>
    <string name="label_connect_outlet">Connect the central station using the network cables and power included on the packing. After completed the process, press Continue.</string>
    <string name="title_activity_connect_outlet">Connect the station</string>
    <string name="label_set_serial_hub">Enter the code included inside the packing of your central station and press continue.</string>
    <string name="edit_text_reg_hub_serial_hint">Eg: LIV463E</string>
    <string name="toast_register_bad_credentials">Are all the fields filled correctly ?</string>
    <string name="label_registered_hub_title">Congratulations!</string>
    <string name="label_registered_hub_message">You had correctly connected \nyour station.\n \nStart now to automate your \nhome y live more comfortable \nand safer with Domu.</string>
    <string name="btn_registered_hub">END</string>
    <string name="title_activity_new_devices">NewDevicesActivity</string>
    <string name="label_manage_scenes">Manage Scenes</string>
    <string name="label_select_devices_endpoint_activity">Select the devices you want</string>
    <string name="label_add_scene_activity">Add a new scene</string>
    <string name="label_edit_scene_activity">Add Command</string>
    <string name="label_select_devices_activity">Select devices</string>
    <string name="button_add_new_scene">Save scene</string>
    <string name="text_add_scene_name">Give the scene a name:</string>
    <string name="label_on">On</string>
    <string name="label_off">Off</string>
    <string name="label_open">%1$s (OPEN)</string>
    <string name="label_close" translatable="false">%1$s (CLOSE)</string>
    <string name="label_unlock">Unlock</string>
    <string name="label_lock">Lock</string>
    <string name="label_unlocked">Unlocked</string>
    <string name="label_locked">Locked</string>
    <string name="label_level_percentage" translatable="false">%1$s%%</string>
    <string name="label_play">Play</string>
    <string name="label_pause">Pause</string>
    <string name="label_up">%1$s (UP)</string>
    <string name="label_down">%1$s (DOWN)</string>
    <string name="label_selected">%1$s (SELECTED)</string>
    <string name="label_unselected">%1$s (UNSELECTED)</string>
    <string name="label_number_of_elements_scene">Actions in scene: %1$d</string>
    <string name="dialog_already_have_triggers">You already have some triggers for this action. What do you want to do ?</string>
    <string name="dialog_create_trigger">Create</string>
    <string name="dialog_remove_trigger">Remove existing one</string>
    <string name="dialog_remove_trigger_message">Select the trigger to remove</string>
    <string name="save">Save</string>
    <string name="btn_trigger_on_positive_binary">When it is turned on</string>
    <string name="btn_trigger_on_negative_binary">When it is turned off</string>
    <string name="try_again">Try Again</string>
    <string name="description_add_zwave">Please, to include a new Z-Wave device into the network, press the button on the device you wish to include. In case you are unsure what button to press, search in the device manual the manufacturer included in the product package.</string>
    <string name="add_manually">Add Manually</string>
    <string name="no_device_was_found_while_adding">No device was found while adding</string>
</resources>