<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context="co.ar_smart.www.user.EditAccountActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:weightSum="1">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/label_edit_user_first_name_text_view"
            android:id="@+id/edit_user_first_name_text_view" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/principal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/label_edit_user_first_name"
            android:id="@+id/edit_user_first_name" />
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/label_edit_user_last_name_text_view"
            android:id="@+id/edit_user_last_name_text_view" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/principal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:hint="@string/label_edit_user_last_name"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:id="@+id/edit_user_last_name"/>
        <View
            android:layout_width="match_parent"
            android:layout_height="20dp"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="0.1"
            android:textSize="20sp"
            android:gravity="center"
            android:text="@string/label_edit_user_email_text_view"
            android:id="@+id/edit_user_email_text_view" />
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/principal"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/label_edit_user_email"
            android:id="@+id/edit_user_email" />
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="30dp"
            android:background="@color/colorPrimaryDark"
            android:textColor="@color/blanco"
            android:text="@string/label_edit_user_button"
            android:id="@+id/edit_user_button" />
    </LinearLayout>


</LinearLayout>
