<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:background="@color/principal"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.ar_smart.www.register.NewAdminActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:weightSum="1">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"
            android:layout_weight="0.5">
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextNewUser"
                android:hint="@string/edit_text_new_user_name"
                android:id="@+id/edtName"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextNewUser"
                android:hint="@string/edit_text_new_user_email"
                android:inputType="textEmailAddress"
                android:id="@+id/edtEmail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextNewUser"
                android:hint="@string/edit_text_new_user_confirm_email"
                android:inputType="textEmailAddress"
                android:id="@+id/edtConfEmail"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/editTextNewUser"
                android:hint="@string/edit_text_new_user_password"
                android:inputType="textPassword"
                android:id="@+id/edtPassword"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="0.4"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:weightSum="1">
            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/secundario"
                android:onClick="createAccount"
                android:background="@drawable/filled_button"
                android:text="@string/btn_new_user_create"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/blanco"
                android:textSize="19dp"
                android:layout_margin="20dp"
                android:id="@+id/txvExistingAccount"
                android:onClick="existingAccount"
                android:text="@string/label_new_user_existing_user"/>
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>
