<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.ar_smart.www.register.PropertiesRegisterHubActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_prop_req_hub_name"
                    android:textColor="@color/soporte"
                    android:textSize="17sp" />

                <EditText
                    android:id="@+id/edit_text_hub_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:hint="@string/edit_text_prop_req_hub_name_hint"
                    android:textSize="17sp" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/principal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:weightSum="1">

                <ImageView
                    android:id="@+id/selectedImage"
                    android:layout_width="80dp"
                    android:layout_height="70dp" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="10dp"
                    android:layout_marginRight="10dp"
                    android:gravity="center"
                    android:text="@string/label_prop_req_hub_image"
                    android:textSize="17sp" />

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_marginEnd="10dp"
                    android:layout_weight="0.4"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnCapture"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:layout_marginBottom="10dp"
                        android:background="@color/activar"
                        android:text="@string/capture"
                        android:textColor="@color/blanco" />

                    <Button
                        android:id="@+id/btnGallery"
                        android:layout_width="wrap_content"
                        android:layout_height="30dp"
                        android:background="@color/activar"
                        android:text="@string/select"
                        android:textColor="@color/blanco" />

                </LinearLayout>

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="15dp"
                android:background="@color/principal" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/label_prop_reg_hub_map"
                    android:textSize="20sp" />

                <ImageView
                    android:id="@+id/staticMap"
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_marginBottom="10dp"
                    android:layout_marginTop="10dp" />

                <Button
                    android:id="@+id/continueMap"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@color/activar"
                    android:text="@string/label_continue"
                    android:textColor="@color/blanco" />
            </LinearLayout>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
