<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.ar_smart.www.user.ManagementUserActivity">

    <RelativeLayout
        android:id="@+id/only_admins_can_edit_devices_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:gravity="center"
            android:text="Only the administrator can add or modify devices in this home" />
    </RelativeLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_weight="4"
        android:gravity="center">
        <ImageView
            android:id="@+id/imgAni"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/basic_animation" />
    </LinearLayout>
    <Button
        android:id="@+id/btnEditDevs"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="10dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/right_arrow_icon"
        android:onClick="editDevices"
        android:text="@string/editDevice_btntext"
        android:textAllCaps="false"
        android:textColor="@color/blanco" />
    <Button
        android:id="@+id/btnAddWifi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/right_arrow_icon"
        android:onClick="addWifi"
        android:text="@string/addwifi_btntext"
        android:textAllCaps="false"
        android:textColor="@color/blanco" />
    <Button
        android:id="@+id/btnDelWifi"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/right_arrow_icon"
        android:onClick="delWifi"
        android:text="@string/delwifi_btntext"
        android:textAllCaps="false"
        android:textColor="@color/blanco" />
    <Button
        android:id="@+id/btnAddZwave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/right_arrow_icon"
        android:onClick="addZWave"
        android:text="@string/addwave_btntext"
        android:textAllCaps="false"
        android:textColor="@color/blanco" />
    <Button
        android:id="@+id/btnDelZwave"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/colorPrimaryDark"
        android:drawableEnd="@drawable/right_arrow_icon"
        android:onClick="delZWave"
        android:text="@string/delzwave_btntext"
        android:textAllCaps="false"
        android:textColor="@color/blanco" />

</LinearLayout>
