<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="co.ar_smart.www.user.ChangePasswordActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password_old"
        android:id="@+id/text_view_old_password"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:labelFor="@id/edit_text_old_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_old_password"
        android:layout_below="@+id/text_view_old_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password_new"
        android:id="@+id/text_view_new_password"
        android:layout_below="@+id/edit_text_old_password"
        android:layout_centerHorizontal="true"
        android:labelFor="@id/edit_text_new_password" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_new_password"
        android:layout_below="@+id/text_view_new_password"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password_new_repeat"
        android:id="@+id/text_view_new_password_repeat"
        android:layout_below="@+id/edit_text_new_password"
        android:layout_centerHorizontal="true"
        android:labelFor="@id/edit_text_new_password_repeat" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:id="@+id/edit_text_new_password_repeat"
        android:layout_below="@+id/text_view_new_password_repeat"
        android:layout_centerHorizontal="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_change_password_button"
        android:id="@+id/change_password_button"
        android:layout_below="@+id/edit_text_new_password_repeat"
        android:layout_centerHorizontal="true" />
</RelativeLayout>
