<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:weightSum="10"
    tools:context="co.ar_smart.www.user.ManagementUserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginBottom="5dp"
        android:layout_weight="5.2"
        android:orientation="vertical">

        <TextView
            android:id="@+id/add_device_text_view_message"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical"
            android:text="@string/description_add_zwave"
            android:textAlignment="center"
            android:textSize="17sp" />

        <View
            android:id="@+id/separator"
            android:layout_width="match_parent"
            android:layout_height="0.8dp"
            android:layout_marginBottom="5dp"
            android:background="@android:color/darker_gray"
            android:gravity="center_vertical"
            android:visibility="visible" />

        <Button
            android:id="@+id/add_device_wifi_try_again_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:background="@color/colorPrimaryDark"
            android:text="@string/try_again"
            android:textColor="@color/blanco" />

        <Button
            android:id="@+id/add_device_wifi_manual_add_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:text="@string/add_manually"
            android:textColor="@color/blanco"
            android:visibility="visible" />
    </LinearLayout>

    <ProgressBar android:id="@+id/progressnewDev"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4" />
    <ListView
        android:id="@+id/list_new_devices"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4"
        android:visibility="gone">
    </ListView>

    <TextView
        android:id="@+id/no_device_mmesage_while_adding"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_weight="4"
        android:text="@string/no_device_was_found_while_adding"
        android:textAlignment="center"
        android:textSize="20sp"
        android:visibility="gone" />

</LinearLayout>